tests/==out/param.dollar.gc.out
 dollar=dol$lar
eval dol$lar 
        ^ ? syntax error
dol=dol
